Adicionada imagem do cabeçalho e menus laterais

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>LOGO DO SITE</h1>
+    <header>
+        <img src="Edutech.jpg" alt="Logo Edutech">
+        <ul>
+            <li>Pensamento Computacional</li>
+            <li>Programação I</li>
+            <li>Games e Programação</li>
+        </ul>
 </body>
 </html>
