Ajuste do tamanho da imagem

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="Edutech.jpg" alt="Logo Edutech">
+        <img class="cabecalho-imagem" src="Edutech.jpg" alt="Logo Edutech">
         <ul>
             <li>Pensamento Computacional</li>
             <li>Programação I</li>
