--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
+    <header class="cabecalho">
         <img class="cabecalho-imagem" src="Edutech.jpg" alt="Logo Edutech">
-        <ul>
-            <li>Pensamento Computacional</li>
-            <li>Programação I</li>
-            <li>Games e Programação</li>
+        <ul class="cabecalho-lista">
+            <li class="cabecalho-lista-item">Pensamento Computacional</li>
+            <li class="cabecalho-lista-item">Programação I</li>
+            <li class="cabecalho-lista-item">Games e Programação</li>
         </ul>
 </body>
 </html>
