Atualização da logo cabeçalho

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="Edutech.jpg" alt="Logo Edutech">
+        <img class="cabecalho-imagem" src="Edutech_horiz_principal.png" alt="Logo Edutech">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Pensamento Computacional</li>
             <li class="cabecalho-lista-item">Programação I</li>
