--- a/index.html
+++ b/index.html
@@ -14,5 +14,10 @@
             <li class="cabecalho-lista-item">Programação I</li>
             <li class="cabecalho-lista-item">Games e Programação</li>
         </ul>
+    <header>
+    <section class="edutech">
+        <h2 class="edutech-titulo">O que é</h2>
+        <img src="" alt="">
+    </section>
 </body>
 </html>
