Atulização layout título

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </ul>
     </header>
     <section class="edutech">
-        <h2 class="edutech-titulo">O que é</h2><img src="Imagem1.png" alt="Logo Edutech"><h2 class="edutech-titulo">?</h2>
+        <h2 class="edutech-titulo">O que é</h2><img class="imagem-titulo" src="Imagem1.png" alt="Logo Edutech"><h2 class="edutech-titulo">?</h2>
     </section>
 </body>
 </html>
