Atualização inserção parágrafo

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </header>
     <section class="edutech">
         <h2 class="edutech-titulo">O que é</h2><img class="imagem-titulo" src="Imagem1.png" alt="Logo Edutech"><h2 class="edutech-titulo">?</h2>
-        <p>class="edutech-texto1"É uma iniciativa da SEED, que visa a formação de estudantes na área de tecnologia e inovação para o desenvolvimento de projetos significativos à comunidade.</p>
-        <p>class="edutech-texto2"Oportuniza o protagonismo do estudante na aplicação de estratégias para resolução de problemas, nas suas práticas escolares e vivências pessoais.</p>
+        <p class="edutech-texto1"> É uma iniciativa da SEED, que visa a formação de estudantes na área de tecnologia e inovação para o desenvolvimento de projetos significativos à comunidade.</p>
+        <p class="edutech-texto2"> Oportuniza o protagonismo do estudante na aplicação de estratégias para resolução de problemas, nas suas práticas escolares e vivências pessoais.</p>
     </section>
 </body>
 </html>
