--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@
         </div>
         <img class="edutech-imagem" src="Edutech_icone_principal.png" alt="Ícone Edutech">
     </section>
+    <section>classs="estudante"
+        <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+    </section>
 </body>
 </html>
