atualização seção estudante

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <img class="edutech-imagem" src="Edutech_icone_principal.png" alt="Ícone Edutech">
     </section>
-    <section>classs="estudante"
+    <section>classs="estudante">
         <h2 class="estudante-titulo"> Quem são nossos estudantes? </h2>
     </section>
 </body>
