--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     </section>
     <section classs="estudante">
         <h2 class="estudante-titulo"> Quem são nossos estudantes? </h2>
+        <img class="estudante-imagem" src="BeteWhats.jpeg" alt="Foto Bete">
+        <h3>Elisabete</h3>
     </section>
 </body>
 </html>
