--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </section>
     <section classs="estudante">
         <h2 class="estudante-titulo"> Quem são nossos estudantes? </h2>
-        <img class="estudante-imagem" src="Edutech_horiz_principal.png" alt="Foto Bete">
+        <img class="estudante-imagem" src="BeteWhats.jpeg" alt="Foto Bete">
         <h3>Elisabete</h3>
     </section>
 </body>
