Inserindo ícones redes sociais

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         <h2 class="estudante-titulo"> Quem são nossos estudantes? </h2>
         <img class="estudante-imagem" src="BeteWhats.jpeg" alt="Foto Bete">
         <h3>Elisabete</h3>
+        <img class="estudante-icone" src="github.png" alt="icone github">
+        <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
+        <img class="estudante-icone" src="instagram.png" alt="icone instagram">
     </section>
 </body>
 </html>
