--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
     </section>
     <section classs="estudante">
         <h2 class="estudante-titulo"> Quem são nossos estudantes? </h2>
-        <img class="estudante-imagem" src="BeteWhats.jpeg" alt="Foto Bete">
-        <h3>Elisabete</h3>
-        <img class="estudante-icone" src="github.png" alt="icone github">
-        <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
-        <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+        <div> class= "estudante-div" 
+            <img class="estudante-imagem" src="BeteWhats.jpeg" alt="Foto Bete">
+            <h3>Elisabete</h3>
+            <img class="estudante-icone" src="github.png" alt="icone github">
+            <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
+            <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+        </div>
     </section>
 </body>
 </html>
