Atualização alinhameto seção Estudante

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </section>
     <section classs="estudante">
         <h2 class="estudante-titulo"> Quem são nossos estudantes? </h2>
-        <div> class= "estudante-div" 
+        <div> class= "estudante-div"> 
             <img class="estudante-imagem" src="BeteWhats.jpeg" alt="Foto Bete">
             <h3>Elisabete</h3>
             <img class="estudante-icone" src="github.png" alt="icone github">
