Inserção imagens seção Estudante

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         <div> class= "estudante-div"> 
             <img class="estudante-imagem" src="BeteWhats.jpeg" alt="Foto Bete">
             <h3>Elisabete</h3>
-            <img class="estudante-icone" src="github.png" alt="icone github">
-            <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
-            <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+            <img class="estudante-icone" src="github1.png" alt="icone github">
+            <img class="estudante-icone" src="linkedin1.png" alt="icone linkedin">
+            <img class="estudante-icone" src="instagram1.png" alt="icone instagram">
         </div>
     </section>
 </body>
