--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     </section>
     <section classs="estudante">
         <h2 class="estudante-titulo"> Quem são nossos estudantes? </h2>
+    <div class="estudante-todos">
+        <span></span>
         <div class="estudante-div"> 
             <img class="estudante-imagem" src="BeteWhats.jpeg" alt="Foto Bete">
             <h3>Elisabete</h3>
@@ -35,6 +37,22 @@
             <img class="estudante-icone" src="linkedin1.png" alt="icone linkedin">
             <img class="estudante-icone" src="instagram1.png" alt="icone instagram">
         </div>
+        <div class="estudante-div"> 
+            <img class="estudante-imagem" src="BeteWhats.jpeg" alt="Foto Bete">
+            <h3>Elisabete</h3>
+            <img class="estudante-icone" src="github1.png" alt="icone github">
+            <img class="estudante-icone" src="linkedin1.png" alt="icone linkedin">
+            <img class="estudante-icone" src="instagram1.png" alt="icone instagram">
+        </div>
+        <div class="estudante-div"> 
+            <img class="estudante-imagem" src="BeteWhats.jpeg" alt="Foto Bete">
+            <h3>Elisabete</h3>
+            <img class="estudante-icone" src="github1.png" alt="icone github">
+            <img class="estudante-icone" src="linkedin1.png" alt="icone linkedin">
+            <img class="estudante-icone" src="instagram1.png" alt="icone instagram">
+        </div>
+        <span></span>
+    </div>
     </section>
 </body>
 </html>
