Link dos ícones

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <div class="estudante-div"> 
             <img class="estudante-imagem" src="BeteWhats.jpeg" alt="Foto Bete">
             <h3>Elisabete</h3>
-            <img class="estudante-icone" src="github1.png" alt="icone github">
+            <a href="https://github.com/Ellisa1210"><img class="estudante-icone" src="github1.png" alt="icone github"></a>
             <img class="estudante-icone" src="linkedin1.png" alt="icone linkedin">
-            <img class="estudante-icone" src="instagram1.png" alt="icone instagram">
+            <a href="https://instagram.com/ellisa.alves?utm_source=qr&igshid=ZDc4ODBmNjlmNQ%3D%3D"><img class="estudante-icone" src="instagram1.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div"> 
             <img class="estudante-imagem" src="BeteWhats.jpeg" alt="Foto Bete">
