--- a/index.html
+++ b/index.html
@@ -43,6 +43,20 @@
             <img class="estudante-icone" src="linkedin1.png" alt="icone linkedin">
             <img class="estudante-icone" src="instagram1.png" alt="icone instagram">
         </div>
+        <div class="estudante-div"> 
+            <img class="estudante-imagem" src="BeteWhats.jpeg" alt="Foto Bete">
+            <h3>Elisabete</h3>
+            <img class="estudante-icone" src="github1.png" alt="icone github">
+            <img class="estudante-icone" src="linkedin1.png" alt="icone linkedin">
+            <img class="estudante-icone" src="instagram1.png" alt="icone instagram">
+        </div>
+        <div class="estudante-div"> 
+            <img class="estudante-imagem" src="BeteWhats.jpeg" alt="Foto Bete">
+            <h3>Elisabete</h3>
+            <img class="estudante-icone" src="github1.png" alt="icone github">
+            <img class="estudante-icone" src="linkedin1.png" alt="icone linkedin">
+            <img class="estudante-icone" src="instagram1.png" alt="icone instagram">
+        </div>
     </div>
     </section>
 </body>
