--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     <section classs="estudante">
         <h2 class="estudante-titulo"> Quem são nossos estudantes? </h2>
     <div class="estudante-todos">
-        <div class="estudante-div"> 
+        <span></span>
+        <div class="estudante-div">
             <img class="estudante-imagem" src="BeteWhats.jpeg" alt="Foto Bete">
             <h3>Elisabete</h3>
             <a href="https://github.com/Ellisa1210"><img class="estudante-icone" src="github1.png" alt="icone github"></a>
