--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         </div>
     </div>
     <div class="estudante-todos">
+        <span></span>
         <div class="estudante-div"> 
             <img class="estudante-imagem" src="BeteWhats.jpeg" alt="Foto Bete">
             <h3>Elisabete</h3>
