--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
             <img class="estudante-icone" src="linkedin1.png" alt="icone linkedin">
             <img class="estudante-icone" src="instagram1.png" alt="icone instagram">
         </div>
+        <span></span>
         <div class="estudante-div"> 
             <img class="estudante-imagem" src="BeteWhats.jpeg" alt="Foto Bete">
             <h3>Elisabete</h3>
