--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </section>
     <section classs="estudante">
         <h2 class="estudante-titulo"> Quem são nossos estudantes? </h2>
-    <div class="estudante-todos"> /* 1 linha */
+    <div class="estudante-todos"> <!-- 1 linha -->
         <span></span>
         <div class="estudante-div">
             <img class="estudante-imagem" src="BeteWhats.jpeg" alt="Foto Bete">
@@ -52,7 +52,7 @@
             <img class="estudante-icone" src="instagram1.png" alt="icone instagram">
         </div>
     </div>
-    <div class="estudante-todos"> /* 2 linha */
+    <div class="estudante-todos"> <!-- 2 linha -->
         <span></span>
         <div class="estudante-div"> 
             <img class="estudante-imagem" src="BeteWhats.jpeg" alt="Foto Bete">
