--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li class="cabecalho-lista-item">Games e Programação</li>
         </ul>
     </header>
+    <section class="pagina">
     <section class="edutech">
         <div class="edutech-div-conteudo">
             <h2 class="edutech-titulo">O que é</h2><img class="imagem-titulo" src="Imagem1.png" alt="Logo Edutech"><h2 class="edutech-titulo">?</h2>
@@ -76,6 +77,7 @@
             <img class="estudante-icone" src="instagram1.png" alt="icone instagram">
         </div>
     </div>
+    </section>
     </section>
 </body>
 </html>
