--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li class="cabecalho-lista-item">Games e Programação</li>
         </ul>
     </header>
+
     <section class="pagina">
     <section class="edutech">
         <div class="edutech-div-conteudo">
@@ -77,7 +78,10 @@
             <img class="estudante-icone" src="instagram1.png" alt="icone instagram">
         </div>
     </div>
-    </section>
-    </section>
+    </section> <!--fecha classe estudante-todos-->
+    </section> <!-- fecha classe pagina-->
+
+    <footer class="rodape">
+        <img src="Edutech_horiz_principal.png" alt="Logo Edutech">
 </body>
 </html>
