tamanho imagem rodapé

--- a/index.html
+++ b/index.html
@@ -82,6 +82,6 @@
     </section> <!-- fecha classe pagina-->
 
     <footer class="rodape">
-        <img src="Edutech_horiz_principal.png" alt="Logo Edutech">
+        <img class="rodape-imagem" src="Edutech_horiz_principal.png" alt="Logo Edutech">
 </body>
 </html>
